index.html update

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hidayah Bootstrap Template - Index</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>Asesorias legales</title>
+  <meta content="" name="Asesorias legales Nikhol Muñoz">
+  <meta content="" name="Abogada alboralista en Bogotá, asesorias legales Nikhol Muñoz">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
