--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Knight Bootstrap Template - Index</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>Nikhol Muñoz - Abogada laboralista</title>
+  <meta content="Asesorias legales en derecho laboral" name="description">
+  <meta content="Abogados Bogotá Medellín Derecho Laboral" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -43,6 +43,7 @@
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/logo.jpg" alt=""></a>
       <h1 data-aos="zoom-in">ABOGADA NIKHOL MUÑOZ</h1>
       <h2 data-aos="fade-up">CON ÉNFASIS EN DERECHO LABORAL</h2>
+      <h2 data-aos="fade-up">ASESORÍAS VIRTUALES Y PRESENCIALES</h2>
       <a data-aos="fade-up" href="#about" class="btn-get-started scrollto">Saber más</a>
     </div>
   </section><!-- End Hero -->
@@ -58,30 +59,13 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul class="nav-inner">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li class="drop-down"><a href="">About</a>
-            <ul>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#team">Team</a></li>
-
-              <li class="drop-down"><a href="#">Deep Drop</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#header">Inicio</a></li>
+          <li><a href="#about">Acerca de mí</a></li>
 
           <li class="nav-logo"><a href="index.html"><img src="assets/img/logo-nav.jpg" alt="" class="img-fluid" id="nav-bar-logo"></a></li>
 
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#portfolio">Servicios</a></li>
+          <li><a href="#contact">Contáctame</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -128,7 +112,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Servicios</h2>
-          <p>Asesoria jurídica integral para empleadores y trabajadores.</p>
+          <p>Asesoría jurídica integral en derecho laboral para empleadores y trabajadores.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -1012,27 +996,12 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <a href="#header" class="scrollto footer-logo"><img src="assets/img/hero-logo.png" alt=""></a>
-            <h3>Knight</h3>
-            <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-          </div>
+            <a href="#header" class="scrollto footer-logo"><img src="assets/img/logo-nav.jpg" alt=""></a>
+            <h3>Nikhol Muñoz</h3>
+            <h3>Abogada Laboralista</h3>
+                </div>
         </div>
 
-        <div class="row footer-newsletter justify-content-center">
-          <div class="col-lg-6">
-            <form action="" method="post">
-              <input type="email" name="email" placeholder="Enter your Email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-
-        <div class="social-links">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
 
       </div>
     </div>
